<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.13</version>
        <relativePath/>
    </parent>

    <groupId>io.yak.ops</groupId>
    <artifactId>yak-ops</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>Yak Ops</name>
    <description>Yak Ops unified parent and reactor build</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
        <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
        <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
        <spotless-maven-plugin.version>3.10.2</spotless-maven-plugin.version>
        <palantir-java-format.version>2.97.0</palantir-java-format.version>
    </properties>

    <modules>
        <module>yak-ops-bom</module>
        <module>yak-ops-common</module>
        <module>yak-ops-security</module>
        <module>yak-ops-dao</module>
        <module>yak-ops-spi</module>
        <module>yak-ops-core</module>
        <module>yak-ops-business</module>
        <module>yak-ops-plugins/yak-ops-plugin-datasource</module>
        <module>yak-ops-boot</module>
        <module>yak-ops-ui</module>
        <module>yak-ops-dist</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.yak.ops</groupId>
                <artifactId>yak-ops-bom</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <release>${java.version}</release>
                    <parameters>true</parameters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless-maven-plugin.version}</version>
                <configuration>
                    <java>
                        <includes>
                            <include>src/main/java/**/*.java</include>
                        </includes>
                        <removeUnusedImports/>
                        <forbidWildcardImports/>
                        <palantirJavaFormat>
                            <version>${palantir-java-format.version}</version>
                            <style>PALANTIR</style>
                            <formatJavadoc>false</formatJavadoc>
                        </palantirJavaFormat>
                        <trimTrailingWhitespace/>
                        <endWithNewline/>
                    </java>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>